<resources>
    <string name="app_name">Medic Metrics</string>

    <!-- Register-->
    <string name="personal_information">Personal Information</string>
    <string name="account_information">Account Information</string>

    <!-- Scan-->
    <string name="no_available_devices">No available devices</string>
    <string name="location_dialog">Bluetooth needs the GPS enabled in order to scan devices properly.</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="connected">Connected to %1$s</string>
    <string name="disconnected">Disconnected</string>

    <!-- Connect-->
    <string name="heart_rate">Heart rate:</string>
    <string name="body_temperature">Body temperature:</string>

    <!-- Metrics-->
    <string name="format_bpm">%1$s bpm</string>
    <string name="not_available">n/a</string>

    <!-- Report-->
    <string name="blood_oxygen">Blood oxygen:</string>
    <string name="respiratory_rate">Respiratory rate:</string>
    <string name="systolic_blood_pressure">Systolic blood pressure:</string>
    <string name="score">Score:</string>
    <string name="no_registered_records">No registered records</string>
    <string name="format_percent">%1$s%%</string>
    <string name="format_celsius">%1$s  \u2103</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_user">Invalid user</string>
    <string name="name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="register_successful">Register was successful</string>

    <!-- Parameters-->
    <string name="catheter_used">Catheter used:</string>
    <string name="oxygen_supplemented">Oxygen supplemented:</string>
    <string name="level_of_consciousness">Level of consciousness:</string>
    <string name="calculate_score">Calculate score</string>
    <string name="respiratory_rate_2">Respiratory Rate</string>
    <string name="invalid_respiratory_rate">Invalid respiratory rate</string>
    <string name="ml_h">ml/h</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="consciousness_level">Consciousness level:</string>
    <string name="urine_output">Urine output:</string>
    <string name="format_milliliter_per_hour">%1$s ml/h</string>
    <string name="invalid_milliliter_per_hour">Invalid milliliter per hour</string>
    <string name="description">Description:</string>
    <string name="clinical_concern_low">Patient should be monitored every 4 hours minimum.</string>
    <string name="clinical_concern_medium">Patient should be minimum monitored hourly.</string>
    <string name="clinical_concern_high">Patient should be monitored every 15–30 minutes and 999 should be called for urgent transfer to acute hospital.</string>
    <string name="about_description">This Android application was made from Georgios Christodoulidis within the context of his dissertation for the Masters degree in Computer Science (Mobile Computing). It is a prototype and not an application designed to get into production.</string>
    <string-array name="consciousness_levels">
        <item>Alert</item>
        <item>Voice</item>
        <item>Pain</item>
        <item>Unresponsive</item>
    </string-array>
</resources>
